# mlcc

./: LICENSE  README.md
bbr/: Cargo.toml
bbr/src/: lib.rs
deepcc/: actor.pt  agent.py  main.py  util.py
deepcc/utils/: ddpg.py  memory.py  model.py  random_process.py  util.py
proto/: Cargo.toml  cshm.cc  proxy.py  rebuild_ccp.sh  runccp.py  static.py  switch.proto  switch.py  switch_pb2.py  switch_pb2_grpc.py  utils_em1.9.py  utils_p1p1.py
proto/kernel/: Makefile  ccp_nl.c  netlink_test.c  tcp_ccp.c
proto/kernel/ccpkp/: ccpkp.c
proto/log/: t0.5i0.01_400_200  t0.5i0.02_400_200  t1i0.04_400_200  t2i0.02_800_200  t2i0.04_800_200  t2i0.05_400_200  t2i0.05_800_200  t2i0.06_400_200  t2i0.06_800_200  t2i0.08_400_200  t2i0.08_800_200
proto/nccl_patch/src/: bootstrap.cc
proto/nccl_patch/src/collectives/: all_reduce.cc
proto/nccl_patch/src/include/: mlcc.h  socket.h
proto/netenv/: clean.sh  tc_rate20g.sh  tc_rate20g_delay.sh  tc_rate20g_loss.sh
proto/profile/: cpu_load.sh  nic_load.sh  output-1.1.txt  output-32.txt  output-resnet.txt  output-vgg19+resnet-tcp.txt  output-vgg19-1.txt  output-vgg19-2.txt
proto/rs/: lib.rs  main.rs
proto/workloads/: benchmark_byteps_ddp.py  kill_server_byteps.py  kill_worker_byteps.sh  launch_template.sh  pytorch_synthetic.py
proto/workloads/bps/: bps-g3launch.sh  server_hosts  worker_hosts
proto/workloads/gpt-2/: test_gpt2.py  train.py  train_gpt2.py
reno-cubic/: Cargo.toml
reno-cubic/py/: Cargo.toml  reno.py  setup.py
reno-cubic/py/src/: lib.rs
reno-cubic/src/: bin_helper.rs  cubic.rs  lib.rs  reno.rs
(+2 files in other folders)
