[package]
name = "generic_cong_avoid"
version = "0.3.0"
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
repository = "https://github.com/ccp-project/generic-cong-avoid"
license = "ISC"
edition="2018"

[features]
bin = ["tracing-subscriber"]

[dependencies]
clap = "2"
portus = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.2", optional = true }

[[bin]]
name = "cubic"
required-features = ["bin"]

[[bin]]
name = "reno"
required-features = ["bin"]
