[package]
name = "py_generic_cong_avoid"
version = "0.2.0"
authors = [""]

[dependencies]
clap = "2.29"
fnv = "1"
generic_cong_avoid = { path = "../" }
pyportus = "0.4.0"
portus = "0.4"
simple-signal = "1"
slog = { version = "2" }
slog-async = "2"
slog-term = "2"
time = "0.1"

[dependencies.pyo3]
version = "0.2.7"
features = ["extension-module"]
default-features = false

[features]
bench = []

[lib]
name = "py_generic_cong_avoid"
crate-type = ["cdylib"]
